syntax = "proto3";
package stockpb;
option go_package="github.com/AfRpEng/goorder-v2/common/genproto/stockpb";
import "google/protobuf/empty.proto";
import "orderpb/order.proto";
service StockService{
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
  rpc CheckIfItemsInStock(CheckIfItemsInStockRequest) returns (CheckIfItemsInStockResponse);
}

message GetItemsRequest{
  repeated string ItemsIDs = 1;
}

message GetItemsResponse{
  repeated orderpb.Item Items = 1;
}

message CheckIfItemsInStockRequest {
  repeated orderpb.ItemWithQuantity Items = 1;
}

message CheckIfItemsInStockResponse {
  int32 Instock = 1;
  repeated  orderpb.Item Items = 2;
}